--- a/profesionales/templates/sidebar_paciente.html
+++ b/profesionales/templates/sidebar_paciente.html
@@ -1,15 +1,7 @@
 <ul class="list-unstyled components">
     <!--titulo agrupador sin link <p>Profesionales</p>-->
     <li class="active">
-        <a href="{% url 'profesionales.index' %}" aria-expanded="false" class="dropdown-toggle">Nueva Consulta</a>
-<!--         <ul class="collapse list-unstyled" id="homeSubmenu">
-            <li>
-                <a href="{% url 'profesionales.tablero.por_profesion' %}">Por profesion</a>
-            </li>
-            <li>
-                <a href="{% url 'profesionales.tablero.por_departamento' %}">Por departamento</a>
-            </li>
-        </ul> -->
+        <a href="{% url 'profesionales.crear.consulta' %}" aria-expanded="false" class="dropdown-toggle">Nueva Consulta</a>
     </li>
 
 </ul>
