--- a/calendario/templates/calendario.html
+++ b/calendario/templates/calendario.html
@@ -318,7 +318,7 @@
       const hour = `0${dateTime.getHours()}`.slice(-2);
       const minutes = `0${dateTime.getMinutes()}`.slice(-2);
       const seconds = `0${dateTime.getSeconds()}`.slice(-2);
-      return `${year}-${month}-${day} ${hour}:${minutes}:${seconds}`;
+      return `${day}/${month}/${year} ${hour}:${minutes}:${seconds}`;
     }
 
     function toggleElementAttribute(el, attribute) {
