volver a definir nombres de menues

--- a/ggg/templates/baseadmin.html
+++ b/ggg/templates/baseadmin.html
@@ -46,8 +46,8 @@
           <ul class="list-unstyled components">
                 <!--titulo agrupador sin link <p>Profesionales</p>-->
                 <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Profesionales</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <a href="#menu_profesionales" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Profesionales</a>
+                    <ul class="collapse list-unstyled" id="menu_profesionales">
                         <li>
                             <a href="{% url 'profesionales.tablero.por_profesion' %}">Por profesion</a>
                         </li>
@@ -60,8 +60,8 @@
                 <!--titulo agrupador sin link <p>Atenciones</p> -->
                 <li>
                     <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Obras sociales</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <a href="#menu_oss" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Obras sociales</a>
+                    <ul class="collapse list-unstyled" id="menu_oss">
                         <li>
                             <a href="{% url 'obras-sociales.tablero.por_provincia' %}">Por provincia</a>
                         </li>
@@ -75,8 +75,8 @@
                 <!--titulo agrupador sin link <p>Atenciones</p> -->
                 <li>
                     <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Centros de salud</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                    <a href="#menu_centros" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Centros de salud</a>
+                    <ul class="collapse list-unstyled" id="menu_centros">
                         <li>
                             <a href="#">Por area programática</a>
                         </li>
