--- a/ggg/templates/baseadmin.html
+++ b/ggg/templates/baseadmin.html
@@ -5,9 +5,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Municipalidad de Córdoba">
+  <meta name="description" content="{{ site_description }}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>{% block title %}{{ title }}{% endblock %}</title>
+  <title>{% block title %}{{ site_title }}{% endblock %}</title>
 
   <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
@@ -40,64 +42,10 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>{{ short_title }}</h3>
+                <h3>{{ site_short_title }}</h3>
             </div>
 {% if user.is_authenticated %}
-          <ul class="list-unstyled components">
-                <!--titulo agrupador sin link <p>Profesionales</p>-->
-                <li class="active">
-                    <a href="#menu_profesionales" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Profesionales</a>
-                    <ul class="collapse list-unstyled" id="menu_profesionales">
-                        <li>
-                            <a href="{% url 'profesionales.tablero.por_profesion' %}">Por profesion</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'profesionales.tablero.por_departamento' %}">Por departamento</a>
-                        </li>
-                    </ul>
-                </li>
-                
-                <!--titulo agrupador sin link <p>Atenciones</p> -->
-                <li>
-                    <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#menu_oss" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Obras sociales</a>
-                    <ul class="collapse list-unstyled" id="menu_oss">
-                        <li>
-                            <a href="{% url 'obras-sociales.tablero.por_provincia' %}">Por provincia</a>
-                        </li>
-                        <li>
-                            <a href="#">Por especialidad</a>
-                        </li>
-                        
-                    </ul>
-                </li>
-
-                <!--titulo agrupador sin link <p>Atenciones</p> -->
-                <li>
-                    <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                    <a href="#menu_centros" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Centros de salud</a>
-                    <ul class="collapse list-unstyled" id="menu_centros">
-                        <li>
-                            <a href="#">Por area programática</a>
-                        </li>
-                        <li>
-                            <a href="#">Por especialidad</a>
-                        </li>
-                        
-                    </ul>
-                </li>
-
-                <!--titulo agrupador sin link <p>Atenciones</p> -->
-                 <li>
-                  <!-- menu link suelto <a href="#">Otro Menu principal</a> -->
-                  <a href="#menu_turnos" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Turnos</a>
-                  <ul class="collapse list-unstyled" id="menu_turnos">
-                    <li>
-                      <a href="{% url 'calendario.index' %}">Definir turnos</a>
-                    </li>
-                  </ul>
-                </li>
-            </ul>
+  {% include "menu_lat.html" %}
 {% endif %}          
           <ul class="list-unstyled CTAs">
             <li><a href="https://github.com/cluster311/ggg" class="download">+ info</a></li>
@@ -125,19 +73,8 @@
             <ul class="nav navbar-nav ml-auto">
 
           {% if user.is_authenticated %}
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Profesionales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Atenciones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Centros de salud</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Historia clínica</a>
-              </li>
-            {% endif %}
+            {% include "menu_top.html" %}    
+          {% endif %}
 
             </ul>
           </div>
