--- a/ggg/templates/home.html
+++ b/ggg/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "baseadmin.html" %}
 
 {% block content %}
+<h2>{{ site_title }}</h2>
+<p>{{ site_description }}</p>
 <h2>Acceso</h2>
     <p>Usuario:</p>
     <p>Clave:</p>
