re-join base templates

--- a/profesionales/templates/profesionales/tableros.html
+++ b/profesionales/templates/profesionales/tableros.html
@@ -1,4 +1,4 @@
-{% extends "baseadmin.html" %}
+{% extends "base_admin.html" %}
 
 {% block extra_head %}
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
