--- a/profesionales/templates/profesionales/profesional_list.html
+++ b/profesionales/templates/profesionales/profesional_list.html
@@ -7,7 +7,7 @@
      <div class="form-group">
         <input name="search" type="text" placeholder="buscar" class="form-control" value="{{ search_txt }}">
      </div>
-     <button type="submit" class="btn btn-success">Search</button>
+     <button type="submit" class="btn btn-success">Buscar</button>
  </form>
 
 {% if is_paginated %}
