base: link to login page for non authorized users

--- a/ggg/templates/home.html
+++ b/ggg/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>{{ site_title }}</h2>
 <p>{{ site_description }}</p>
-<h2>Acceso</h2>
-    <p>Usuario:</p>
-    <p>Clave:</p>
+{% if not request.user.is_authenticated %}
+<a class="btn btn-link btn-primary" href="{% url 'account_login' %}"> Acceso </a>
+{% endif %}
 {% endblock %}
