--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load account %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
@@ -16,8 +17,8 @@
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        {{ form|crispy }}
+        <input type="submit" class="btn btn-primary" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
