--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
@@ -13,8 +14,8 @@
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                {{ form|crispy }}
+                <input type="submit" name="action" class="btn btn-primary" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
