--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
@@ -9,7 +10,7 @@
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        {{ form|crispy }}
+        <input type="submit" name="action" class="btn btn-primary" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
