--- a/recupero/templates/recupero/facturacion-pendiente-de-envio.html
+++ b/recupero/templates/recupero/facturacion-pendiente-de-envio.html
@@ -9,7 +9,12 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Nombre</th>
+        <th scope="col">Fecha</th>
+        <th scope="col">Obra social</th>
+        <th scope="col">Centro de salud</th>
+        <th scope="col">Profesional</th>
+        <th scope="col">Especialidad</th>
+        <th scope="col">CIE10 principal</th>
     </tr>
     </thead>
     <tbody>
