--- a/recupero/templates/recupero/tipoprestacion_detail.html
+++ b/recupero/templates/recupero/tipoprestacion_detail.html
@@ -3,8 +3,15 @@
 {% load static %}
 
 {% block content %}
+<a role="button" class="btn btn-warning btn-sm active" href="{% url 'recupero.tipos-prestacion' %}">Volver a la lista</a>
+{% if perms.recupero.change_tipoprestacion %}
+<a role="button" class="btn btn-warning btn-sm active" href="{% url 'recupero.tipos-prestacion.edit' pk=object.id %}">Editar</a>
+{% endif %}
 
-<h2>{{ object.nombre }}</h2>
+<h2>{{ object.codigo }}</h2>
+<p>{{ object.nombre }}: <b>$ {{ object.arancel }}</b></p>
+<p>{{ object.descripcion }}</p>
+<p>{{ object.observaciones }}</p>
 <p>Tipo: {{ object.get_tipo_display }}</p>
 <p>Documentos requeridos</p>
 <ul>
