--- a/recupero/templates/recupero/tipoprestacion_update.html
+++ b/recupero/templates/recupero/tipoprestacion_update.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<a role="button" class="btn btn-warning btn-sm active" href="{% url 'recupero.tipos-prestacion' %}">Volver a la lista</a>
     <h2>Actualizar tipo de prestacion</h2>
     {% crispy form %}
     <div class="line"></div>
