--- a/recupero/templates/recupero/tipodocumentoanexo_update.html
+++ b/recupero/templates/recupero/tipodocumentoanexo_update.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h2>Actualizar tipo de documento anexo</h2>
+    <a role="button" class="btn btn-warning btn-sm active" href="{% url 'recupero.tipos-doc-anexo' %}">Volver a la lista</a>
     {% crispy form %}
     <div class="line"></div>
 
