--- a/ggg/templates/admin_add_button.html
+++ b/ggg/templates/admin_add_button.html
@@ -1,3 +1,3 @@
 <a role="button" 
-    class="btn btn-warning btn-sm active" 
+    class="btn btn-warning btn-me active" 
     href="{% url add_url %}">Agregar</a>
