--- a/ggg/templates/menu_top.html
+++ b/ggg/templates/menu_top.html
@@ -1,12 +1,35 @@
-<li class="nav-item active">
-    <a class="nav-link" href="#">Profesionales</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Atenciones</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Centros de salud</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#">Historia clínica</a>
-</li>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="nav navbar-nav ml-auto">
+
+        <li class="nav-item active">
+            <a {% if title_url %}href="{% url title_url %}"{% endif %} 
+                role="button"
+                class="nav-link btn btn-light btn-lg" 
+                style="font-weight:bold">{{ title }}</a>
+        </li>
+
+        {% if use_search_bar %}
+        <li>{% include 'admin_search_bar.html' %}</li>
+        {% endif %}
+
+        {% if use_add_btn %}
+        <li>{% include 'admin_add_button.html' %}</li>
+        {% endif %}
+        <!--
+        <li class="nav-item">
+            <a class="nav-link" href="#">Profesionales</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Atenciones</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Centros de salud</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Historia clínica</a>
+        </li>
+        -->
+
+    </ul>
+  </div>
+
